k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: projet-devops
  labels:
    name: projet-devops
