k8s/11-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ollama-netpol
  namespace: projet-devops
spec:
  podSelector:
    matchLabels:
      app: ollama
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: open-webui
      ports:
        - protocol: TCP
          port: 11434
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: open-webui-netpol
  namespace: projet-devops
spec:
  podSelector:
    matchLabels:
      app: open-webui
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
